fix overflow issue

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
     overflow: scroll;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 #nav {
@@ -16,13 +15,12 @@ body {
     top: 0;
     left: 0;
     z-index: 2;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
 }
 #navbar {
     display: flex;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     background-color: #545e5988;
     color: white;
     justify-content: space-between;
@@ -60,8 +58,7 @@ body {
 #landing {
     display: block;
     padding-top: 100px;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
     height: 80vh;
     display: flex;
     justify-content: space-between;
@@ -94,6 +91,7 @@ body {
     display: none;
 }
 #writings {
+    position: relative;
     width: 50%;
     max-width: 600px;
     padding: 0px 70px 0px;
@@ -110,6 +108,7 @@ body {
     margin-right: 124px;
 }
 #contacts {
+    width: 100%;
     height: fit-content;
     background: rgba(0, 0, 0, 0.87);
     color: white;
@@ -117,7 +116,7 @@ body {
 .top-part {
     display: flex;
     height: 90px;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -173,16 +172,6 @@ body {
     filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(115deg) brightness(108%) contrast(108%);
 }
 
-
-@media only screen and (max-width: 1350px) {
-    .and-line {
-        margin-right: 0px;
-        margin-top: 0;
-        font-size: 36px;
-        float: none;
-    }
-  }
-
 @media only screen and (max-width: 768px) {
     #landing {
         display: flex;
@@ -192,11 +181,13 @@ body {
         padding-top: 100px;
         height: fit-content;
         min-height: 90vh;
+        width: 100%;
     }
     #landing #writings h1 {
         font-size: 27px;
     }
     #landing #writings {
+        display: inline-block;
         margin: 0 auto;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -207,14 +198,21 @@ body {
         -webkit-box-orient: vertical;
     }
     #picture {
-        height: fit-content;
+        /* position:fixed;
+        bottom:0;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;  */
         margin-right: 0;
+        height: 100%;
     }
     #landing #picture img {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        height: 300px;
+        margin-top: 20%;
+        height: 80%;
+        max-height: 340px;
     }
     #navbar {
         height: 90px;
